// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles favorite projects 1`] = `
[
  {
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`handles favorite projects 2`] = `
[
  {
    "isFavorite": true,
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`renders 1`] = `
<div
  className="layout-page projects-page"
  id="projects-page"
>
  <Suggestions
    suggestions="projects"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="projects.page"
  />
  <h1
    className="a11y-hidden"
  >
    projects.page
  </h1>
  <ScreenPositionHelper
    className="layout-page-side-outer"
  >
    <Component />
  </ScreenPositionHelper>
  <div
    className="layout-page-main"
  >
    <A11ySkipTarget
      anchor="projects_main"
    />
    <div
      role="main"
    >
      <h2
        className="a11y-hidden"
      >
        list_of_projects
      </h2>
      <div
        className="layout-page-header-panel layout-page-main-header"
      >
        <div
          className="layout-page-header-panel-inner layout-page-main-header-inner"
        >
          <div
            className="layout-page-main-inner"
          >
            <PageHeader
              currentUser={
                {
                  "dismissedNotices": {},
                  "isLoggedIn": true,
                }
              }
              loading={false}
              onPerspectiveChange={[Function]}
              onQueryChange={[Function]}
              onSortChange={[Function]}
              query={
                {
                  "coverage": undefined,
                  "duplications": undefined,
                  "gate": undefined,
                  "languages": undefined,
                  "maintainability": undefined,
                  "new_coverage": undefined,
                  "new_duplications": undefined,
                  "new_lines": undefined,
                  "new_maintainability": undefined,
                  "new_reliability": undefined,
                  "new_security": undefined,
                  "new_security_review_rating": undefined,
                  "qualifier": undefined,
                  "reliability": undefined,
                  "search": undefined,
                  "security": undefined,
                  "security_review_rating": undefined,
                  "size": undefined,
                  "sort": undefined,
                  "tags": undefined,
                  "view": undefined,
                }
              }
              selectedSort="name"
              total={0}
              view="overall"
            />
          </div>
        </div>
      </div>
      <div
        className="layout-page-main-inner"
      >
        <ProjectsList
          cardType="overall"
          currentUser={
            {
              "dismissedNotices": {},
              "isLoggedIn": true,
            }
          }
          handleFavorite={[Function]}
          isFavorite={false}
          isFiltered={false}
          projects={
            [
              {
                "key": "foo",
                "measures": {},
                "name": "Foo",
                "qualifier": "TRK",
                "tags": [],
                "visibility": "public",
              },
            ]
          }
          query={
            {
              "coverage": undefined,
              "duplications": undefined,
              "gate": undefined,
              "languages": undefined,
              "maintainability": undefined,
              "new_coverage": undefined,
              "new_duplications": undefined,
              "new_lines": undefined,
              "new_maintainability": undefined,
              "new_reliability": undefined,
              "new_security": undefined,
              "new_security_review_rating": undefined,
              "qualifier": undefined,
              "reliability": undefined,
              "search": undefined,
              "security": undefined,
              "security_review_rating": undefined,
              "size": undefined,
              "sort": undefined,
              "tags": undefined,
              "view": undefined,
            }
          }
        />
        <ListFooter
          accessibleLoadMoreLabel="projects.show_more"
          count={1}
          loadMore={[Function]}
          loading={false}
          ready={true}
          total={0}
        />
      </div>
    </div>
  </div>
</div>
`;
